# asr

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  build.rs  dockerfile  whisper_params.md
docs/: examples.json  openapi.yaml
examples/: transcribe_task.rs
src/: lib.rs  main.rs
src/asr/: mod.rs  whisper.rs
src/audio/: mod.rs
src/auth/: error.rs  middleware.rs  mod.rs  service.rs  stats.rs  storage.rs  types.rs
src/schedule/: README.md  mod.rs  types.rs
src/schedule/callback/: mod.rs
src/schedule/processors/: mod.rs  transcribe.rs
src/schedule/scheduler/: mod.rs  task_manager.rs  worker.rs
src/schedule/tests/: mod.rs
src/storage/: mod.rs
src/storage/task/: entity.rs  mapping.rs  mod.rs  sqlite.rs  tests.rs
src/utils/: http.rs  logger.rs
src/web/: mod.rs  pagination.rs
src/web/handlers/: asr.rs  auth.rs  callback_test.rs  mod.rs  schedule.rs
