[package]
name = "asr-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.5.1"
whisper-rs = { version = "0.11.1", features = ["metal"] }
rubato = "0.16.0"
realfft = "3.4.0"
anyhow = "1.0.91"
async-trait = "0.1.83"
once_cell = "1.20.2"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }  # 添加 serde 特性

serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"


# tracing
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tempfile = "3.2"

# fft
rustfft = "6.1.0"

# runtime and web
tokio = { version = "1.41.0", features = ["full"] }
axum = { version = "0.7.7", features = ["macros"] }
governor = { version = "0.7", features = ["std", "jitter"] }
reqwest = { version = "0.12.8", features = ["json"] }


# parallel 
rayon = "1.10.0"
ndarray = "0.16.1"

# database
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "chrono"] }

# sea-orm
sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-query = "0.32.0"
dotenv = "0.15.0"

[dev-dependencies]
tempfile = "3.2"
uuid = { version = "1.0", features = ["v4"] }
